Updated javadoc for Skybox.java Fixed a bunch of deprecation warnings.